# docs/swagger.json
@@ -872,7 +872,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Card"
                         }
                     },
                     "400": {
@@ -940,7 +940,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Card"
                         }
                     },
                     "400": {
@@ -1309,7 +1309,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.Subscription"
                         }
                     },
                     "400": {
@@ -1377,7 +1377,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.Subscription"
                         }
                     },
                     "400": {
@@ -2002,10 +2002,19 @@
                 "card_holder": {
                     "type": "string"
                 },
+                "color": {
+                    "type": "string"
+                },
+                "currency": {
+                    "type": "string"
+                },
                 "last_digit": {
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 },
                 "user_id": {
@@ -2152,17 +2161,29 @@
             "type": "object",
             "required": [
                 "card_holder",
+                "color",
+                "currency",
                 "last_digit",
-                "name"
+                "name",
+                "type"
             ],
             "properties": {
                 "card_holder": {
+                    "type": "string"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "currency": {
                     "type": "string"
                 },
                 "last_digit": {
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
@@ -2176,6 +2197,12 @@
                 "card_holder": {
                     "type": "string"
                 },
+                "color": {
+                    "type": "string"
+                },
+                "currency": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -2183,6 +2210,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
@@ -2514,19 +2544,7 @@
         "responses.CardStatistics": {
             "type": "object",
             "properties": {
-                "card_last_digit": {
-                    "type": "string"
-                },
-                "card_name": {
-                    "type": "string"
-                },
                 "currency": {
-                    "type": "string"
-                },
-                "most_expensive": {
-                    "type": "number"
-                },
-                "most_expensive_name": {
                     "type": "string"
                 },
                 "total_monthly_payment": {
@@ -2618,6 +2636,9 @@
                 "name": {
                     "type": "string"
                 },
+                "next_bill_date": {
+                    "type": "string"
+                },
                 "price": {
                     "type": "number"
                 },
@@ -2668,6 +2689,9 @@
                     "type": "number"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "next_bill_date": {
                     "type": "string"
                 },
                 "price": {
